# YTMusicDownloader

./: .gitignore  CMakeLists.txt  Info.plist  README.md  Utils.hpp  main.cpp  settings_window.cpp  settings_window.h  yt_dlp_gui
icons/: YTDownloader.icns
